2023. 5.20. Renamed labels for exceptions in zPH3DAlloc, zPH3DCreatePrism, zPH3DCreatePyramid, and zPH3DFReadSTL_BinVec. [zeo_ph, zeo_ph_stl]
2023. 5.20. Reflected new specification of ZDEF_STRUCT and ZDEF_UNION. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_mat6d, zeo_ep, zeo_frame3d, zeo_ph, zeo_nurbs]
2023. 5.20. Reflected new specification of zeda-makefile-gen, and modified src/makefile. [src]
2023. 5.19. Added __zeo_stl_echo, and modified _zPH3DFReadSTL_ASCIIsolid and zPH3DFReadSTL_Bin to switch echo mode. [zeo_ph_stl]
2023. 5.17. Reflected modification of Z_NAMED_CLASS. [zeo_render_optic, zeo_render_texure, zeo_shape3d, zeo_map]
2023. 5.16. Modified zeo.h to include zeo_brep.h. [zeo]
2023. 5.16. Replaced __EXPORT to __ZEO_EXPORT. [all]
2023. 5.15. Modified zTextureClone and zTextureBumpAlloc to allocate 4 bytes for each pixel of a texture. [zeo_render_texture]
2023. 5.12. Added a note in comments of zGJK and zGJKPL. [zeo_col_gjk]
2023. 5.12. Reflected renaming of atox_c to zA2X_c to _zRGBHex. [zeo_render_color]
2023. 3.30. Redefined operator* for zEP as a member function. [zeo_ep]
2023. 3.29. Reflected new specification of zArrayClass and zArray2Class. [zeo_render_texture, zeo_vec2d_list, zeo_vec3d_list, zeo_vec3d_tree, zeo_ph, zeo_ph_stl, zeo_ph_ply, zeo_ph_obj, zeo_nurbs, zeo_shape3d_sphere, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_ellips, zeo_shape3d_ecyl, zeo_bv3d_obb, zeo_brep, zeo_brep_trunc, zeo_col_gjk, zeo_col_ph, zeo_mshape3d, zeo_map_terra, zeo_mapnet]
2023. 3.29. Modified config.lib and config.tools for C++ compilation. [src, tools]
2023. 3.26. Defined zNURBS3DVecTan, zNURBS3DVecNorm, and zNURBS3D1VecTan. [zeo_nurbs]
2023. 3.26. Renamed zNURBS3DVecNorm to zNURBS3DVecTSpace. [zeo_nurbs]
2023. 3.25. Renamed dim member of zNURBS3D to order. [zeo_nurbs]
2023. 3.15. Modified output of usage of zeo_qhull. [app]